--- a/src/assets/styles/components/Task.css
+++ b/src/assets/styles/components/Task.css
@@ -1,3 +1,10 @@
 .task-wrapper {
-  background-color: gray;
+  background-color: white;
+  user-select: none;
+  border-radius: .3em;
+  cursor: pointer;
+}
+
+.task-wrapper:active {
+  cursor: grabbing;
 }
